# sms-transmitter

./: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: publish-to-docker-hub.yml  sonarqube.yml
src/: config.json  sms_processor.py
